versioned_docs/version-3.0/file-system/client-api/commands/admin/content/_manage-filesystems-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

#Manage file systems



This method is used to create a new file system. If the file system already exists then it will throw an exception.

## Syntax

<TabItem value="create_fs_1" label="create_fs_1">
<CodeBlock language="csharp">
{`Task CreateFileSystemAsync(FileSystemDocument filesystemDocument);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **filesystemDocument** | [FileSystemDocument](../../../../../glossary/file-system-document.mdx) |  The document containing all configuration options for a new file system (e.g. active bundles, name/id, data path) |
| **newFileSystemName** | string | The new file system name, if `null` then current file system name will be used (`store.AsyncFilesCommands.FileSystem`) |

---

| Return Value | |
| ------------- | ------------- |
| **Task** | A task that represents the asynchronous operation |

## Example

Let's create a new file system with Versioning bundle enabled:

<TabItem value="create_fs_2" label="create_fs_2">
<CodeBlock language="csharp">
{`await store.AsyncFilesCommands.Admin
	.CreateFileSystemAsync(new FileSystemDocument
	\{
		Id = "Raven/FileSystem/NorthwindFS",
		Settings =
		\{
			\{ Constants.FileSystem.DataDirectory, "~/FileSystems/NorthwindFS" \},
                     \{ Constants.ActiveBundles, "Versioning" \}
                 \}
             \});
`}
</CodeBlock>
</TabItem>




## CreateOrUpdateFileSystemAsync

This method creates a new file system or updates the configuration of already existing one according to the specified document.

<TabItem value="create_or_update_fs_1" label="create_or_update_fs_1">
<CodeBlock language="csharp">
{`Task CreateOrUpdateFileSystemAsync(FileSystemDocument filesystemDocument, string newFileSystemName = null);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **filesystemDocument** | [FileSystemDocument](../../../../../glossary/file-system-document.mdx) |  The document containing all configuration options for a new file system (e.g. active bundles, name/id, data path) |
| **newFileSystemName** | string | The new file system name, if `null` then current file system name will be used (`store.AsyncFilesCommands.FileSystem`) |

---

| Return Value | |
| ------------- | ------------- |
| **Task** | A task that represents the asynchronous operation |



## EnsureFileSystemExistsAsync

Instead of calling the `CreateOrUpdateFileSystemAsync` method, you can use this one to make sure that file system exists. If there is no such file system, it will be created with default settings.

<TabItem value="ensure_fs_exists_1" label="ensure_fs_exists_1">
<CodeBlock language="csharp">
{`Task EnsureFileSystemExistsAsync(string fileSystem);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **fileSystem** | string | The file system name |

---

| Return Value | |
| ------------- | ------------- |
| **Task** | A task that represents the asynchronous operation |

## Example

<TabItem value="ensure_fs_exists_2" label="ensure_fs_exists_2">
<CodeBlock language="csharp">
{`await store.AsyncFilesCommands.Admin
FileSystemExistsAsync("NorthwindFS");
`}
</CodeBlock>
</TabItem>



## DeleteFileSystemAsync

This method is used to delete a file system from a server, with a possibility to remove its all data from the hard drive.

<TabItem value="delete_fs_1" label="delete_fs_1">
<CodeBlock language="csharp">
{`Task DeleteFileSystemAsync(string fileSystemName = null, bool hardDelete = false);
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **fileSystemName** | string | The name of a file system to delete, if `null` then current file system name will be used (`store.AsyncFilesCommands.FileSystem`) |
| **hardDelete** | bool | Determines if all data should be removed (data files, indexing files, etc.). Default: `false` |

---

| Return Value | |
| ------------- | ------------- |
| **Task** | A task that represents the asynchronous delete operation |

## Example

The below code deletes the current file system together with its data on the hard drive:

<TabItem value="delete_fs_2" label="delete_fs_2">
<CodeBlock language="csharp">
{`await store.AsyncFilesCommands.Admin
		.DeleteFileSystemAsync(hardDelete: true);
`}
</CodeBlock>
</TabItem>


